// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components > Analysis > Title should render properly given different states 1`] = `
<div
  className="ApplicationDockTitle"
>
  <div>
    <Icon
      icon={
        Object {
          "icon": Array [],
          "iconName": "chart-area",
          "prefix": "fas",
        }
      }
    />
     
    Analysis
  </div>
  <div>
    <Button
      className="pull-right"
      disabled={false}
      onClick={[MockFunction]}
      size="sm"
      style="primary"
      title=""
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "sync",
            "prefix": "fas",
          }
        }
      />
       
      Fetch results
    </Button>
    <Button
      className="pad-right pull-right"
      disabled={false}
      onClick={[MockFunction]}
      size="sm"
      style="success"
      title=""
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "plus",
            "prefix": "fas",
          }
        }
      />
      New regional analysis
    </Button>
  </div>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 2`] = `
<div
  className="ApplicationDockTitle"
>
  <div>
    <Icon
      icon={
        Object {
          "icon": Array [],
          "iconName": "chart-area",
          "prefix": "fas",
        }
      }
    />
     
    Analysis
  </div>
  <div>
    <Button
      className="pull-right"
      disabled={false}
      onClick={[MockFunction]}
      size="sm"
      style="primary"
      title=""
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "sync",
            "prefix": "fas",
          }
        }
      />
       
      Fetch results
    </Button>
    <Button
      className="pad-right pull-right"
      disabled={true}
      onClick={[MockFunction]}
      size="sm"
      style="success"
      title="Fetch results for a single point before running a regional analysis"
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "plus",
            "prefix": "fas",
          }
        }
      />
      New regional analysis
    </Button>
  </div>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 3`] = `
<div
  className="ApplicationDockTitle"
>
  <div>
    <Icon
      icon={
        Object {
          "icon": Array [],
          "iconName": "chart-area",
          "prefix": "fas",
        }
      }
    />
     
    Analysis
  </div>
  <div>
    <Button
      className="pull-right"
      disabled={true}
      onClick={[MockFunction]}
      size="sm"
      style="primary"
      title="Select a project before fetching results"
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "sync",
            "prefix": "fas",
          }
        }
      />
       
      Fetch results
    </Button>
    <Button
      className="pad-right pull-right"
      disabled={false}
      onClick={[MockFunction]}
      size="sm"
      style="success"
      title=""
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "plus",
            "prefix": "fas",
          }
        }
      />
      New regional analysis
    </Button>
  </div>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 4`] = `
<div
  className="ApplicationDockTitle"
>
  <div>
    <Icon
      icon={
        Object {
          "icon": Array [],
          "iconName": "chart-area",
          "prefix": "fas",
        }
      }
    />
     
    Loading opportunity dataset…
  </div>
  <div>
    <Button
      className="pull-right"
      onClick={[MockFunction]}
      size="sm"
      style="danger"
    >
      <Icon
        icon={
          Object {
            "icon": Array [],
            "iconName": "times",
            "prefix": "fas",
          }
        }
      />
       Abort
    </Button>
  </div>
</div>
`;
